--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-2-HTML-CSS-primeiros-passos-em-CSS/index.html
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-2-HTML-CSS-primeiros-passos-em-CSS/index.html
@@ -3,12 +3,25 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style></style>
+    <style>
+        h1{
+            font-size: 65px;
+            color: orange;
+        }
+
+        ul{
+            background-color: plum;
+        }
+
+        .backgroud-color{
+            background-color: powderblue;
+        }
+    </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p>Qual é a sua cor favorita?</p>
-    <ul>
+    <p class="backgroud-color">Qual é a sua cor favorita?</p>
+    <ul class="backgroud-color">
       <li>Amarelo</li>
       <li>Vermelho</li>
       <li>Marrom</li>
