muda font-style e text-decoration no paragrafo e aumenta line-height da lista

--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-2-HTML-CSS-primeiros-passos-em-CSS/index.html
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-2-HTML-CSS-primeiros-passos-em-CSS/index.html
@@ -18,10 +18,13 @@
         p{
             font-weight: 600;
             font-size: 3em;
+            font-style: italic;
+            text-decoration: underline;
         }
 
         ul{
             background-color: plum;
+            line-height: 1.5em;
         }
 
         .backgroud-color{
