--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-2-HTML-CSS-primeiros-passos-em-CSS/index.html
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-2-HTML-CSS-primeiros-passos-em-CSS/index.html
@@ -1,44 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>HTML</title>
     <style>
+      body {
+        font-size: 16px;
+      }
 
-        body{
-            font-size: 16px;
-        }
+      h1 {
+        font-size: 65px;
+        color: orange;
+        font-family: sans-serif;
+      }
 
-        h1{
-            font-size: 65px;
-            color: orange;
-            font-family: sans-serif;
-        }
+      p {
+        font-weight: 600;
+        font-size: 3em;
+        font-style: italic;
+        text-decoration: underline;
+      }
 
-        p{
-            font-weight: 600;
-            font-size: 3em;
-            font-style: italic;
-            text-decoration: underline;
-        }
+      ul {
+        background-color: plum;
+        line-height: 1.5em;
+      }
 
-        ul{
-            background-color: plum;
-            line-height: 1.5em;
-        }
+      .backgroud-color {
+        background-color: powderblue;
+      }
 
-        .backgroud-color{
-            background-color: powderblue;
-        }
+      #yellow{
+          background-color: yellow;
+      }
+
+      #red{
+          background-color: red;
+      }
+
+      #brown{
+          background-color: brown;
+      }
     </style>
   </head>
   <body>
+
     <h1>Exercícios 3.2</h1>
     <p class="backgroud-color">Qual é a sua cor favorita?</p>
+
     <ul class="backgroud-color">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="yellow">Amarelo</li>
+      <li id="red">Vermelho</li>
+      <li id="brown">Marrom</li>
     </ul>
+
   </body>
 </html>
