--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-2-HTML-CSS-primeiros-passos-em-CSS/index.html
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-2-HTML-CSS-primeiros-passos-em-CSS/index.html
@@ -3,46 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>HTML</title>
-    <style>
-      body {
-        font-size: 16px;
-      }
-
-      h1 {
-        font-size: 65px;
-        color: orange;
-        font-family: sans-serif;
-      }
-
-      p {
-        font-weight: 600;
-        font-size: 3em;
-        font-style: italic;
-        text-decoration: underline;
-      }
-
-      ul {
-        background-color: plum;
-        line-height: 1.5em;
-      }
-
-      .backgroud-color {
-        background-color: powderblue;
-      }
-
-      #yellow{
-          background-color: yellow;
-      }
-
-      #red{
-          background-color: red;
-      }
-
-      #brown{
-          background-color: brown;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+
   <body>
 
     <h1>Exercícios 3.2</h1>
