--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-2/index.html
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-2/index.html
@@ -9,5 +9,11 @@
     <h1>Lista dos Melhores Sites que já vi</h1>
     <p>Top 3 dos melhores sites que existem na web</p>
     <p>Principais motivos para eu gostar deles</p>
+
+    <ul>
+        <li>MDN</li>
+        <li>W3Schools</li>
+        <li>YouTube</li>
+    </ul>
   </body>
 </html>
