--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-2/index.html
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-2/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Lista dos Melhores Sites que já vi</h1>
-    <p>Top 3 dos melhores sites que existem na web</p>
-    <p>Principais motivos para eu gostar deles</p>
+    <h1 class="centralized">Lista dos Melhores Sites que já vi</h1>
+    <p class="centralized">Top 3 dos melhores sites que existem na web</p>
+    <p class="centralized">Principais motivos para eu gostar deles</p>
 
     <ul>
         <li>MDN</li>
