Adiciona uma ul e coloca a propriedade list-style:none nas duas listas

--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-2/index.html
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-2/index.html
@@ -15,5 +15,11 @@
         <li>W3Schools</li>
         <li>YouTube</li>
     </ol>
+
+    <ul>
+        <li>Característica 1</li>
+        <li>Característica 2</li>
+        <li>Característica 3</li>
+    </ul>
   </body>
 </html>
