--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-4/index.html
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-4/index.html
@@ -6,9 +6,9 @@
     <title>#GoTrybe</title>
   </head>
   <body>
-    <h1><em>Combinações e Classes Descendentes</em></h1>
+    <h1 class="font-red"><em>Combinações e Classes Descendentes</em></h1>
     <br />
-    <h3>Top 5 frases memoráveis:</h3>
+    <h3 class="font-red">Top 5 frases memoráveis:</h3>
     <ol>
       <li>
         <em>Com grandes poderes vêm grandes responsabilidades.</em> - Tio Ben
@@ -24,7 +24,7 @@
         Steve Rogers (Capitão América)
       </li>
     </ol>
-    <h3>As maiores linguagens de programação:</h3>
+    <h3 class="font-red">As maiores linguagens de programação:</h3>
     <ul>
       <li>Python</li>
       <li>Java</li>
@@ -32,7 +32,7 @@
       <li>C#</li>
       <li>C / C++</li>
     </ul>
-    <h3>Maiores aliados de uma pessoa desenvolvedora:</h3>
+    <h3 class="font-red">Maiores aliados de uma pessoa desenvolvedora:</h3>
     <ul>
       <li>
         <a href="https://pt.stackoverflow.com/" target="_blank"
