deixa os 3 primeiros itens da lista de linguagens azul e o item java com fundo rosa

--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-4/index.html
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-4/index.html
@@ -25,7 +25,7 @@
       </li>
     </ol>
     <h3 class="font-red">As maiores linguagens de programação:</h3>
-    <ul>
+    <ul class="languages">
       <li>Python</li>
       <li>Java</li>
       <li>JavaScript</li>
