--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-4/index.html
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-3-HTML-CSS-seletores-e-posicionamento/exercicio-4/index.html
@@ -34,24 +34,36 @@
     </ul>
     <h3 class="font-red">Maiores aliados de uma pessoa desenvolvedora:</h3>
     <ul>
-      <li >
-        <a href="https://pt.stackoverflow.com/" target="_blank" class="stackOverFLow"
+      <li>
+        <a
+          href="https://pt.stackoverflow.com/"
+          target="_blank"
+          class="stackOverFLow"
           >StackOverflow</a
         >
       </li>
-      <li >
-        <a href="https://www.w3schools.com/" target="_blank" class="w3c">W3Schools</a>
+      <li>
+        <a href="https://www.w3schools.com/" target="_blank" class="w3c"
+          >W3Schools</a
+        >
       </li>
-      <li >
-        <a href="https://developer.mozilla.org/pt-BR/" target="_blank" class="mdn"
+      <li>
+        <a
+          href="https://developer.mozilla.org/pt-BR/"
+          target="_blank"
+          class="mdn"
           >MDN Web Docs</a
         >
       </li>
-      <li >
-        <a href="https://devdocs.io/" target="_blank" class="devDocs">DevDocs</a>
+      <li>
+        <a href="https://devdocs.io/" target="_blank" class="devDocs"
+          >DevDocs</a
+        >
       </li>
-      <li >
-        <a href="https://app.betrybe.com/" target="_blank" class="trybe">Trybe</a>
+      <li>
+        <a href="https://app.betrybe.com/" target="_blank" class="trybe"
+          >Trybe</a
+        >
       </li>
     </ul>
   </body>
