--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-4-HTML-semantico/index.html
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-4-HTML-semantico/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width" />
   </head>
   <body>
-    <!--insira os elementos aqui-->
+    <header>
+      <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+      <nav>
+        <ul>
+          <li><a href="">Página inicial</li></a>
+          <li><a href="">Sobre</li></a>
+          <li><a href="">Contato</li></a>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
