--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-4-HTML-semantico/index.html
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-4-HTML-semantico/index.html
@@ -15,5 +15,36 @@
         </ul>
       </nav>
     </header>
+
+    <main>
+      <article>
+        <h2>Fatos sobre o Stomatopoda</h2>
+        <section>
+          <h3>
+            Informações gerais sobre o <em> Odontodactylus scyllarus</em>
+          </h3>
+          <p>
+            Stomatopoda (ou estomatópode), chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de crustáceos marinhos da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.
+          </p>
+
+          <table>
+
+          </table>
+          <!-- tabular -->
+          Reino
+          Filo
+          Subfilo
+          Classe
+          Subclasse
+          Ordem
+        </section>
+        <h2>Fatos interessantes</h2>
+        <!-- Criar uma sessão para cada fato -->
+        <!-- Criar um subtítulo para cada fato -->
+        <section>
+
+        </section>
+      </article>
+    </main>
   </body>
 </html>
