--- a/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-4-HTML-semantico/index.html
+++ b/01-fundamentos/Bloco3-Introducao-a-HTML-e-CSS/dia-4-HTML-semantico/index.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="style.css">
+
   </head>
   <body>
     <header>
-      <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
-      <nav>
-        <ul>
-          <li><a href="">Página inicial</li></a>
-          <li><a href="">Sobre</li></a>
-          <li><a href="">Contato</li></a>
-        </ul>
-      </nav>
+      <div class="header-container">
+        <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
+        <nav>
+          <ul>
+            <li><a href="">Página inicial</li></a>
+            <li><a href="">Sobre</li></a>
+            <li><a href="">Contato</li></a>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
