--- a/01-fundamentos/Bloco5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
+++ b/01-fundamentos/Bloco5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
@@ -38,11 +38,11 @@
     <main class="main-content">
       <section class="center-content">
         <p>Texto padrão do nosso site</p>
-        <p>-----</p>
+        <p id="description">-----</p>
         <p>Trybe</p>
       </section>
     </main>
-    <script>
+    <script src="script.js">
       /*
         Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
         - document.getElementById()
