Parte 2 exercicio 1 ok

--- a/01-fundamentos/Bloco7-introducao-a-javascript-es6-e-testes-unitarios/dia-1-javascript-es6-let-const-arrow-functions-e-template-literals/1-parte-1-exercicio2.html
+++ b/01-fundamentos/Bloco7-introducao-a-javascript-es6-e-testes-unitarios/dia-1-javascript-es6-let-const-arrow-functions-e-template-literals/1-parte-1-exercicio2.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="parte-1-exercicio2.js"></script>
+  <script src="1-parte1-exercicio1.js"></script>
 </body>
 </html>
